[feat/TK-141]: 공동결제내역 GET에 여행멤버 필드 추가